--- a/index.html
+++ b/index.html
@@ -6,6 +6,63 @@
     <link rel="stylesheet" href="./css/stylesheet.css">
   </head>
   <body>
-    
+    <div class="top">
+      <div class="header">
+        <div class="logo">Header Logo</div>
+        <div class="header-links">
+          <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+          </ul>
+        </div>
+      </div>
+      <div class="hero">
+        <h1>The website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+        <button type="button">Sign up</button>
+        <div class="image">
+          <div>this is a placeholder for an image</div>
+        </div>
+      </div>
+    </div>
+    <div class="content">
+      <div class="info">
+        <h2>Some random information.</h2>
+        <div class="info-boxes">
+          <div class="box">
+            <div></div>
+            <p>this is some subtext under an illustration of image</p>
+          </div>
+          <div class="box">
+            <div></div>
+            <p>this is some subtext under an illustration of image</p>
+          </div>
+          <div class="box">
+            <div></div>
+            <p>this is some subtext under an illustration of image</p>
+          </div>
+          <div class="box">
+            <div></div>
+            <p>this is some subtext under an illustration of image</p>
+          </div>
+        </div>
+      </div>
+      <div class="quote-session">
+        <p class="quote">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+        <p class="author">-Thor, God of Thunder</p>
+      </div>
+      <div class="call">
+        <div class="call-text">
+          <h3>Call to action! It's time!</h3>
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button type="button">Sign up</button>
+      </div>
+    </div>
+    <div class="footer">
+      <p>Copyright © The Odin Project 2021</p>
+    </div>
+
   </body>
 </html>
