Complete html and stylesheet design

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top">
@@ -18,9 +21,12 @@
         </div>
       </div>
       <div class="hero">
-        <h1>The website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button type="button">Sign up</button>
+        <div class="hero-left">
+
+          <h1>The website is awesome</h1>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+          <button type="button">Sign up</button>
+        </div>
         <div class="image">
           <div>this is a placeholder for an image</div>
         </div>
@@ -31,19 +37,19 @@
         <h2>Some random information.</h2>
         <div class="info-boxes">
           <div class="box">
-            <div></div>
+            <div class="box-image"></div>
             <p>this is some subtext under an illustration of image</p>
           </div>
           <div class="box">
-            <div></div>
+            <div class="box-image"></div>
             <p>this is some subtext under an illustration of image</p>
           </div>
           <div class="box">
-            <div></div>
+            <div class="box-image"></div>
             <p>this is some subtext under an illustration of image</p>
           </div>
           <div class="box">
-            <div></div>
+            <div class="box-image"></div>
             <p>this is some subtext under an illustration of image</p>
           </div>
         </div>
@@ -53,11 +59,13 @@
         <p class="author">-Thor, God of Thunder</p>
       </div>
       <div class="call">
-        <div class="call-text">
-          <h3>Call to action! It's time!</h3>
-          <p>Sign up for our product by clicking that button right over there!</p>
+        <div class="call-box">
+          <div class="call-text">
+            <h3>Call to action! It's time!</h3>
+            <p>Sign up for our product by clicking that button right over there!</p>
+          </div>
+          <button type="button" class="call-button">Sign up</button>
         </div>
-        <button type="button">Sign up</button>
       </div>
     </div>
     <div class="footer">
